--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/png" href="/assets/images/favicon-96x96.png"/>
+    <link rel="icon" type="image/png" href="https://zzom.io/blog/favicon-96x96.png"/>
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
     <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -21,16 +23,18 @@
     <div class="wrapper">
 
       <header>
-        <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
+        {% if site.logo %}
+        <a href="{{ "/" | absolute_url }}"></a>
+        <img id="site-logo" src="{{site.logo | relative_url}}" alt="Logo" />
+        </a>
+        {% endif %}        
+        <!-- <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
+        <p>{{ site.description | default: site.github.project_tagline }}</p> -->
+
         <div id="navigation">
         {% include navigation.html %}   
         </div>
-        
-        {% if site.logo %}
-        <img id="site-logo" src="{{site.logo | relative_url}}" alt="Logo" />
-        {% endif %}
-        <!-- <p>{{ site.description | default: site.github.project_tagline }}</p> -->
-
+       
         {% if site.github.is_project_page %}
         <!-- <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p> -->
         {% endif %}
@@ -47,9 +51,7 @@
         </ul> -->
         {% endif %}
         
-        {% if site.comments.facebook.appid %}
-        {% include fb-page.html %}
-        {% endif %}
+
       </header>
 
       <section>
@@ -57,6 +59,11 @@
       </section>
 
       <footer>
+        <!-- facebook -->
+        {% if site.comments.facebook.appid %}
+        {% include fb-page.html %}
+        {% endif %}
+
         {% if site.github.is_project_page %}
         <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
