--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,7 +6,7 @@
 #site-logo {
     width: 270px;
     display: block;
-    margin-top: 20px;
+    margin-top: 0px;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 20px;
@@ -18,4 +18,8 @@ header {
 
 #navigation {
     text-align: left;
+}
+
+#pagination {
+    text-align: center;
 }
