--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -40,7 +40,12 @@ a {
   text-decoration:none;
 }
 
-a:hover, a:focus {
+// a:hover, a:focus {
+//   color:#069;
+//   font-weight: bold;
+// }
+
+a:hover {
   color:#069;
   font-weight: bold;
 }
