--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
 
       <header>
         {% if site.logo %}
-        <a href="{{ "/" | absolute_url }}"></a>
+        <a href="{{ "/" | absolute_url }}">
         <img id="site-logo" src="{{site.logo | relative_url}}" alt="Logo" />
         </a>
         {% endif %}        
@@ -64,9 +64,9 @@
         {% include fb-page.html %}
         {% endif %}
 
-        {% if site.github.is_project_page %}
+        <!-- {% if site.github.is_project_page %}
         <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
-        {% endif %}
+        {% endif %} -->
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
 
