페이지 보완

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,17 +1,22 @@
 ---
 layout: default
 ---
+
 <h1>{{ page.title }}</h1>
-<p>{{ page.date | date: "%Y-%m-%d %H:%M" }} / {{ page.author }}</p>
+<!-- <span class="author">{{ page.author }}</span> -->
+<span class="date">{{ page.date | date: '%Y-%m-%d %H:%M' }}</span>
+<div class="content">
 {{ content }}
+</div>
+
 {% if site.comments.facebook.appid %}
 {% include fb-like-button.html %}
 {% endif %}
 
 {% assign filtered_items = site.items | where: 'name', page.item %}
 {% if filtered_items.size > 0 %}
-<h2>관련 아이템</h2>
 
+<h1>관련 아이템</h1>
 <ul>
 {% for item in filtered_items %}
   <li><a href="{{ item.url | relative_url }}">{{ item.name }}</a></li>
