--- a/_includes/fb-page.html
+++ b/_includes/fb-page.html
@@ -1,1 +1,1 @@
-<div class="fb-page" data-href="https://www.facebook.com/project.zzom" data-width="" data-hide-cover="false" data-show-facepile="true"></div>
+<div class="fb-page" data-href="https://www.facebook.com/project.zzom" data-width="" data-adapt-container-width="true" data-small-header="false" data-hide-cover="false" data-show-facepile="true"></div>
