--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,14 +60,14 @@
 
       <footer>
         <!-- facebook -->
-        {% if site.comments.facebook.appid %}
+        <!-- {% if site.comments.facebook.appid %}
         {% include fb-page.html %}
-        {% endif %}
+        {% endif %} -->
 
         <!-- {% if site.github.is_project_page %}
         <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %} -->
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist" target="_blank">orderedlist</a></small></p>
       </footer>
 
     </div>
