페이지 보완

--- a/_includes/fb-comments.html
+++ b/_includes/fb-comments.html
@@ -1,1 +1,1 @@
-<div class="fb-comments" data-href="{{ page.url | absolute_url }}" data-numposts="{{ site.comments.facebook.num_posts}}" data-order-by="{{ site.comments.facebook.order_by }}" data-width="auto"></div>
+<div class="fb-comments" data-href="{{ page.url | absolute_url }}" data-numposts="{{ site.facebook.num_posts}}" data-order-by="{{ site.facebook.order_by }}" data-width="auto"></div>
