--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,3 +1,33 @@
+@font-face {
+  font-family: 'CookieRunOTF-Bold';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_twelve@1.0/CookieRunOTF-Bold00.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'CookieRun-Regular';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/CookieRun-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'KyoboHand';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@1.0/KyoboHand.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Middleschool_student';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/naverfont_08@1.0/Middleschool_student.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap');
+
 a.current {
   color:#069;
   font-weight: bold;
@@ -20,6 +50,19 @@ header {
   text-align: left;
 }
 
+// li > a {
+//  font-family: 'CookieRun-Regular';
+// }
+
 #pagination {
   text-align: center;
+
+}
+
+h1, h2, h3, h2 > a {
+  font-family: 'CookieRunOTF-Bold';
+}
+
+* {
+  font-family: 'Nanum Gothic', sans-serif;
 }
