--- a/_includes/fb-meta.html
+++ b/_includes/fb-meta.html
@@ -1,1 +1,1 @@
-<meta property="fb:app_id" content="{{ site.comments.facebook.appid }}" />
+<meta property="fb:app_id" content="{{ site.facebook.appid }}" />
