페이지 보완

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,7 +1,7 @@
 <nav>
   <ul>
   {% for menu in site.data.navigation %}
-    <li class="navigation-item"><a href="{{ menu.link | relative_url }}" {% if page.url == menu.link %}class="current"{% endif %} target="{{menu.target }}" >{{ menu.name }}</a></li>
+    <li class="navigation-book"><a href="{{ menu.link | relative_url }}" {% if page.url == menu.link %}class="current"{% endif %} target="{{menu.target }}" >{{ menu.name }}</a></li>
   {% endfor %}
   </ul>
 </nav>
