--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,25 +1,22 @@
 ---
 layout: default
 ---
-
 <h1>{{ page.title }}</h1>
-<!-- <span class="author">{{ page.author }}</span> -->
-<span class="date">{{ page.date | date: '%Y-%m-%d %H:%M' }}</span>
+by <span class="author">{{ page.author }}</span> <span class="date">({{ page.date | date: '%Y년 %m월 %d일' }})</span>
 <div class="content">
-{{ content }}
+{{ page.content }}
 </div>
 
 {% if site.facebook.appid %}
 {% include fb-like-button.html %}
 {% endif %}
 
-{% assign filtered_items = site.items | where: 'name', page.item %}
-{% if filtered_items.size > 0 %}
-
-<h1>관련 아이템</h1>
+{% assign filtered_books = site.books | where: 'name', page.book %}
+{% if filtered_books.size > 0 %}
+<h2>관련 도서</h2>
 <ul>
-{% for item in filtered_items %}
-  <li><a href="{{ item.url | relative_url }}">{{ item.name }}</a></li>
+{% for post in filtered_books %}
+  <li><a href="{{ post.url | relative_url }}">{{ post.name }}</a></li>
 {% endfor %}
 </ul>
 {% endif %}
