--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,9 +65,9 @@
         {% endif %} -->
 
         <!-- {% if site.github.is_project_page %}
-        <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
+        <p>This project is maintained <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %} -->
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist" target="_blank">orderedlist</a></small></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme <a href="https://github.com/orderedlist" target="_blank">orderedlist</a></small></p>
       </footer>
 
     </div>
