--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <h1>{{ page.title }}</h1>
-by <span class="author">{{ page.author }}</span> <span class="date">({{ page.date | date: '%Y년 %m월 %d일' }})</span>
+<span class="author">{{ page.author }}</span> <span class="date">({{ page.date | date: '%Y년 %m월 %d일' }})</span>
 <div class="content">
 {{ page.content }}
 </div>
